Obtain stats for link functionality implemented (not unique clicks)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,8 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-security.auth.authHeaderPrefix=Bearer
-
 spring.h2.console.enabled=true
 server.error.include-message=always
+
+security.auth.authHeaderPrefix=Bearer
+service.links.statsCount = 10
