Obtain unique clicking stats functionality implemented

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,5 @@ spring.h2.console.enabled=true
 server.error.include-message=always
 
 security.auth.authHeaderPrefix=Bearer
-service.links.statsCount = 10
+service.links.statsCountAll = 10
+service.links.statsCountUnique = 10
